# lib

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md  README.ru.md  array.hpp  binary-search.hpp  concept.hpp  hash-table.hpp  lr1.py  static.string.hpp  typename.hpp  units.hpp  units.io.hpp
.github/workflows/: build-cmake.yml  clang-tidy-review.yml  cmake.yml  cpp-linter.yml  pr-comment.yml
.github/workflows/scripts/: find-errors.js
cmake/: platform.cmake
lib/: CMakeLists.txt  aggregate.channel.hpp  array.hpp  broadcast.channel.hpp  buffer.hpp  buffered.channel.hpp  buffered.stream.hpp  channel.cpp  channel.hpp  concept.hpp  condition.variable.hpp  coro.hpp  cycle.buffer.hpp  endian.hpp  event.cpp  event.hpp  fp.hpp  index.sequence.hpp  lazy.string.hpp  literal.hpp  lock.guard.hpp  mutex.hpp  numeric.hpp  overload.hpp  parser.hpp  platform.hpp  quantity.hpp  ratio.hpp  raw.array.hpp  raw.storage.hpp  semaphore.hpp  state.channel.hpp  static.string.hpp  stream.hpp  tag.hpp  test.cpp  test.hpp  test.main.cpp  test.undefine.hpp  tuple.hpp  (+5 more)
lib/common/: CMakeLists.txt  condition.variable.hpp  semaphore.hpp
lib/data-structures/: dl-list.hpp  dlist.hpp  flist.hpp
lib/fp/: CMakeLists.txt  base.function.hpp  dynamic.function.cxx  executor.hpp  fmap.hpp  function.hpp  function.test.hpp  impl.coroutine.hpp  impl.function.hpp  impl.value.hpp  list.hpp  map.hpp  maybe.hpp
lib/fp/details/: awaiter.hpp  function.hpp  function.ptr.hpp  promise.hpp  result.hpp  signature.parser.hpp
lib/interpreter/: ast.hpp  compiler.hpp  constexpr.hpp  core.hpp
lib/interpreter/ast/: all.hpp  expression.hpp  function.hpp  literal.hpp  module.hpp  operator.hpp  return.hpp  scope.hpp  statement.hpp  sum.hpp  type.hpp  var.hpp
lib/interpreter/backend/constexpr/: context.hpp  heap.hpp  memory.hpp  root.hpp  typeinfo.hpp
lib/interpreter/ir/: module.hpp
lib/lockfree/: mpmc-queue.hpp  mpmc.queue.hpp  mpsq.queue.cpp  mpsq.queue.hpp  shared.state.hpp
lib/platform/: CMakeLists.txt
lib/platform/windows/: CMakeLists.txt  asio.cpp  asio.hpp  file.cpp  file.hpp  semaphore.cpp  semaphore.hpp
lib/typetraits/: counter.hpp  for.hpp  if.hpp  interpreter.hpp  list.hpp  map.hpp  set.hpp  tag.hpp  var.hpp
lib/units/: CMakeLists.txt  acceleration.hpp  area.hpp  count.hpp  electrical.resistance.hpp  hertz.hpp  newton.hpp  pascal.hpp  velocity.hpp  voltage.hpp
lib/units/si/: electric.current.hpp  length.hpp  luminous.intensity.hpp  mass.hpp  mole.hpp  temperature.hpp  time.hpp
test/: CMakeLists.txt  channel.cpp  coro.cpp  cycle.buffer.cpp  demo.cpp  demo.hpp  event.cpp  functional-programming.cpp  interpreter.cpp  parser.cpp  symbol.calc.cpp  typetraits.cpp  units.cpp
units/: count.hpp  electrical.resistance.hpp  hertz.hpp  pascal.hpp  voltage.hpp
units/si/: electric.current .hpp  length.hpp  luminous.intensity.hpp  mass.hpp  mole.hpp  temperature.hpp  time.hpp
